Manually define data frame for knitr reports if scriptpad is unavailable

--- a/modules/scriptpad/resources/reports/schemas/no_scriptpad.rmd
+++ b/modules/scriptpad/resources/reports/schemas/no_scriptpad.rmd
@@ -27,6 +27,65 @@ with(mtcars, {
 })
 ```
 
+Or integrate with LabKey:
+
+```{r echo=FALSE}
+#
+# setup: load data
+#
+print('Setup script time');
+ptm <- proc.time();
+if (!exists("sharedSession")) {
+    print('running setup code ...');
+    print('scriptpad module unavailable. Defining data fram manually.');
+    participantid <- c(249318596, 249318596, 249318596, 249318596, 249318596, 249318596, 249318596, 249318596, 249318596, 249318596, 249320107, 249320107, 249320107, 249320107, 249320107, 249320127, 249320127, 249320127, 249320127, 249320127, 249320127, 249320127, 249320489, 249320489, 249320489, 249320489, 249320489, 249320897, 249320897, 249320897, 249320897, 249320897, 249320897, 249325717, 249325717, 249325717, 249325717, 249325717);
+    weight_kg <- c(86, 84, 83, 80, 79, 79, 79, 78, 77, 75, 55, 54, 52, 50, 51, 62, 64, 63, 65, 65, 67, 69, 90, 86, 84, 75, 72, 73, 77, 74, 75, 77, 75, 98, 111, 110, 112, 138);
+    temp_c <- c(36.0, 37.0, 37.0, 36.7, 36.8, 37.3, 38.0, 40.0, 39.0, 39.0, 37.0, 37.0, 36.9, 37.3, 36.6, 36.9, 37.3, 36.6, 39.9, 36.0, 41.0, 38.0, 36.9, 40.0, 37.2, 36.5, 37.5, 37.5, 36.8, 37.0, 36.0, 37.2, 36.7, 37.4, 38.0, 33.0, 37.0, 36.5);
+    systolicbloodpressure <- c(129, 133, 133, 135, 142, 129, 122, 122, 121, 123, 120, 123, 120, 139, 114, 140, 179, 134, 135, 131, 137, 129, 124, 134, 128, 140, 130, 112, 121, 120, 134, 115, 97, 108, 137, 136, 133, 156);
+    diastolicbloodpressure <- c(76, 79, 85, 85, 90, 87, 80, 76, 78, 76, 85, 86, 83, 80, 79, 90, 110, 89, 89, 74, 87, 76, 75, 75, 78, 90, 90, 74, 79, 72, 85, 70, 67, 74, 90, 112, 74, 117);
+    pulse <- c(64, 67, 68, 70, 75, 79, 64, 63, 65, 64, 63, 65, 62, 66, 64, 70, 74, 75, 76, 59, 65, 76, 70, 70, 56, 78, 70, 67, 65, 66, 69, 67, 70, 89, 77, 112, 90, 113);
+    labkey.data <- data.frame(participantid, weight_kg, temp_c, systolicbloodpressure, diastolicbloodpressure, pulse);
+    sharedSession <- 1;
+}
+print(proc.time() - ptm);
+```
+
+
+```{r blood-pressure-scatter, message=FALSE, warning=FALSE, echo=FALSE, fig.align='center'}
+#
+# plot 1
+#
+plot(labkey.data$diastolicbloodpressure, labkey.data$systolicbloodpressure,
+main="Diastolic vs. Systolic Pressures: All Visitsx",
+ylab="Systolic (mm Hg)", xlab="Diastolic (mm Hg)", ylim =c(60, 200));
+abline(lsfit(labkey.data$diastolicbloodpressure, labkey.data$systolicbloodpressure));
+
+#
+# plot 2
+#
+data_means <- aggregate(labkey.data, list(ParticipantID =
+ labkey.data$participantid), mean, na.rm = TRUE);
+
+op <- par(mfcol = c(2, 2)) # 2 x 2 pictures on one plot
+c11 <- plot(data_means$diastolicbloodpressure, data_means$weight_kg, ,
+ xlab="Diastolic Blood Pressure (mm Hg)", ylab="Weight (kg)",
+ mfg=c(1, 1))
+abline(lsfit(data_means$diastolicbloodpressure, data_means$weight_kg))
+c21 <- plot(data_means$diastolicbloodpressure, data_means$systolicbloodpressure, ,
+ xlab="Diastolic Blood Pressure (mm Hg)",
+ ylab="Systolic Blood Pressure (mm Hg)", mfg= c(2, 1))
+abline(lsfit(data_means$diastolicbloodpressure, data_means$systolicbloodpressure))
+c21 <- plot(data_means$diastolicbloodpressure, data_means$pulse, ,
+ xlab="Diastolic Blood Pressure (mm Hg)",
+ ylab="Pulse Rate (Beats/Minute)", mfg= c(1, 2))
+abline(lsfit(data_means$diastolicbloodpressure, data_means$pulse))
+c21 <- plot(data_means$diastolicbloodpressure, data_means$temp_c, ,
+ xlab="Diastolic Blood Pressure (mm Hg)",
+ ylab="Temperature (Degrees C)", mfg= c(2, 2))
+abline(lsfit(data_means$diastolicbloodpressure, data_means$temp_c))
+par(op); #Restore graphics parameters
+```
+
 
 ## Inline code
 
